# renamer

./: .gitignore  CMakeLists.txt  version.hpp.in
include/renamer/: logger.hpp  mask.hpp  options.hpp  version.hpp
src/: main.cpp  mask.cpp  options.cpp
